<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">homework1</string>
    <string name="登录">登  录</string>
    <string name="注册">注册</string>
    <string name="请输入密码">请输入密码</string>
    <string name="请输入用户名">请输入用户名</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="还没有账户">还没有账户？</string>
    <string name="s">登 录</string>
    <string name="todo123">TODO</string>
    <string name="todo1">TODO</string>
    <string name="请输入昵称">请输入昵称</string>
    <string name="请输入手机号">请输入手机号</string>
    <string name="请输入密码2">请输入密码</string>
    <string name="zhuce">注册</string>
    <string name="fanhui">返回</string>
    <string name="等">登录</string>
    <string name="huanyin">重邮欢迎你！！！</string>
    <string name="zhu">注册</string>
    <string name="个人">用户</string>
    <string name="adadasd">不知道怎么输入</string>
    <string name="asdsadas">不知道怎么输入</string>
</resources>
