<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorPrimary"
    tools:context="com.example.alpacadh.homework1.HomeWorkActivity"
    tools:layout_editor_absoluteY="81dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/state"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/等"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="213dp"
        android:layout_height="122dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/todo"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"
        tools:ignore="MissingConstraints,NotSibling" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="370dp"
        android:layout_height="324dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:background="@color/colorwwww"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,NotSibling">

        <TextView
            android:id="@+id/view4"
            android:layout_width="1000dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button2"
            android:layout_marginTop="23dp"
            android:text="重邮欢迎你！！！重邮欢迎你！！！重邮欢迎你！！！重邮欢迎你！！！重邮欢迎你！！！"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"/>


        <TextView
            android:id="@+id/editText"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="108dp"
            android:background="#00000000"
            android:gravity="center_vertical"
            android:hint="@string/还没有账户"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.808"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.914" />

        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="98dp"
            android:background="#00000000"
            android:text="@string/注册"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.808"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.914"
            tools:ignore="MissingConstraints,NotSibling,UnknownId" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="342dp"
        android:layout_height="199dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/text1"
            android:layout_width="300dp"
            android:layout_height="44dp"

            android:layout_alignEnd="@+id/editText3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:drawableStart="@mipmap/ic_login_account"
            android:hint="@string/请输入用户名"
            android:drawablePadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editText3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button1"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_alignEnd="@+id/text1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="35dp"
            android:background="@color/colorPrimary"
            android:text="@string/s"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            app:layout_constraintVertical_bias="0.017"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="299dp"
            android:layout_height="44dp"
            android:drawablePadding="10dp"
            android:layout_above="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:drawableStart="@mipmap/ic_login_password"
            android:hint="@string/请输入密码"
            android:password="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
